--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,54 @@
-/* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&family=Roboto:wght@300;400;500;700&display=swap');
+
+* {
+    margin: 0;
+    padding: 0;
+    background: #111111;
+    font-family: 'Poppins', sans-serif;
+    color: #fff
+  }
+
+h1,
+h2,
+h3,
+h4,
+p {
+  margin: 0px;
+  padding: 0px;
+  line-height: 1.125;
+}
+
+ul,
+li {
+  list-style-type: none;
+  margin: 0px;
+  padding: 0px;
+}
+
+a {
+  text-decoration: none;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
+  display: block;
+}
+
+.container {
+  padding: 4.5rem;
+  max-width: 1200px;
+  margin: 0px auto;
+}
+
+@media (max-width: 800px) {
+  .container {
+    padding: 3rem;
+  }
+}
+
+@media (max-width: 600px) {
+  .container {
+    padding: 1.125rem;
+  }
+}
