--- a/src/app/components/quizz/quizz.component.html
+++ b/src/app/components/quizz/quizz.component.html
@@ -1,3 +1,17 @@
-<div>
-
+<div class="quizz-container">
+  <h1>BuzzFeed</h1>
+  <h2>Você seria um herói ou um vilão?</h2>
+  <div class="quizz-questions">
+    <h2>Você seria um herói ou um vilão?</h2>
+  </div>
+  <div class="quizz-options">
+    <button class="btn">Raio</button>
+    <button class="btn">Raio</button>
+    <button class="btn">Raio</button>
+    <button class="btn">Raio</button>
+    <button class="btn">Raio</button>
+  </div>
+  <div class="quizz-results">
+    <h2>Você muito provavelmente seria um super vilão!</h2>
+  </div>
 </div>
