--- a/src/styles.css
+++ b/src/styles.css
@@ -3,10 +3,13 @@
 * {
     margin: 0;
     padding: 0;
-    background: #111111;
     font-family: 'Poppins', sans-serif;
     color: #fff
   }
+
+body{
+  background: #0D0126;
+}
 
 h1,
 h2,
@@ -40,6 +43,24 @@ img {
   max-width: 1200px;
   margin: 0px auto;
 }
+
+.btn {
+  display: inline-block;
+  padding: 16px 32px;
+  color: #fff;
+  background: #214ae7;
+  box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.1);
+  border-radius: 10px;
+  font-size: 1rem;
+  width: 100%;
+  cursor: pointer;
+  border: none;
+}
+
+.btn:hover {
+  background: #20399f;
+}
+
 
 @media (max-width: 800px) {
   .container {
